# SeniorDesign21-22

./: .gitignore  README.md  mega-sonar.ino
sensing_and_actuation/: CMakeLists.txt  dummyData.py  package.xml  readme.md
sensing_and_actuation/arduino/: CMakeLists.txt  package.xml  readme.md
sensing_and_actuation/barometer/: CMakeLists.txt  package.xml
sensing_and_actuation/barometer/msg/: Barometer.msg  barometer.msg
sensing_and_actuation/barometer/src/: barometer_dummy.py
sensing_and_actuation/controls/: CMakeLists.txt  start.py
sensing_and_actuation/controls/launch/: controls.launch
sensing_and_actuation/dummyDataNode/: dummyDataNode.py
sensing_and_actuation/dummyDataNode/dummyDataUserInterface/: barometerWidget.py  hydrophonesWidget.py  imuWidget.py  main.py  sonarWidget.py
sensing_and_actuation/dummy_publisher/: CMakeLists.txt  package.xml
sensing_and_actuation/dummy_publisher/launch/: dummy_publisher.launch
sensing_and_actuation/dummy_publisher/src/: dummy_publisher.py
sensing_and_actuation/dvl/: CMakeLists.txt  package.xml
sensing_and_actuation/dvl/msg/: DVL.msg
sensing_and_actuation/dvl/src/: dvl_dummy.py  dvl_test.py  plot_test.py
sensing_and_actuation/ez_async_data/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml  readme.md  readme.txt
sensing_and_actuation/ez_async_data/msg/: gate.msg
sensing_and_actuation/hydrophones/: CMakeLists.txt  README.md  package.xml
sensing_and_actuation/msg/: sensors_controls_data.msg
sensing_and_actuation/sonar/: CMakeLists.txt  package.xml  sonarRos.ino
sensing_and_actuation/src/: dummyData.py
sensing_and_actuation/teledyne_dvl/: readme.txt
sensors_and_controls/: CMakeLists.txt  package.xml  readme.md
sensors_and_controls/src/: dummyData.py
user_interface/: CMakeLists.txt  package.xml  package.xml~main  readme.md
user_interface/code/: analyticsView.py  analyticsWidget.py  controller.py  header.py  main.py  robosubData.py  user_interface.py
user_interface/src/: analyticsView.py  analyticsWidget.py  barometerWidget.py  controller.py  dvlWidget.py  header.py  hydrophonesWidget.py  imuWidget.py  main.py  robosubData.py  sonarWidget.py  start.py  user_interface.py
(+195 files in other folders)
